Correct right aligned menu item styles
There was a change a while back to fix clicking on the padding surrounding the buttons which has broken the style of the right menu buttons.

--- a/app/styles/less/menubar.less
+++ b/app/styles/less/menubar.less
@@ -70,6 +70,8 @@ div[role=raml-editor] .menubar {
   }
 
   .menu-item-mocking-service {
+    padding: 5px 10px;
+
     .beta {
       background-color: #859900;
       border-radius: 10px;
